infrastructure/kustomize/bases/hi1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hi1
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
  # annotations:
  #   linkerd.io/inject: enabled
